doc: BIG update, almost there
Removed page numbering from the norwegian questionnaire
Lots of changes to the results spreadsheet, differences and shit
Started on evaluation
Wrote further work, a little thin still
Added appendices
wrote the analysis
Added onto motivation
Changed problem description
Changed the research goals and questions
Added more requirements
Wrote summary for architecture
Added chosen technologies
Finished the testing in implementation
Fixed the summaries in the literature study
added onto immersion with social interaction and gameflow
added screenshots for unreal and unity

--- a/doc/questionaire/Questionaire.tex
+++ b/doc/questionaire/Questionaire.tex
@@ -4,6 +4,7 @@
 \usepackage{textcomp,amsmath,longtable}
 \usepackage{latexsym}
 \usepackage[letterpaper, landscape, margin=2cm]{geometry}
+\pagenumbering{gobble}
 
 \begin{document}
 	\newcounter{qnumber}
