--- a/doc/report/conclusion/chp_evaluation.tex
+++ b/doc/report/conclusion/chp_evaluation.tex
@@ -1,10 +1,60 @@
 \chapter{Evaluation}
+\note{Nytt kapittel!}
+This chapter will evaluate the research done in this project, as well as an evaluation of the project as a whole, an evaluation of the technology used, and an evaluation of the game prototype.
 
 
-\section{Evaluation of Project}
+\section{Evaluation of Research and Results}
+The research goals will be revisited and the research questions will be answered through information gathered through the literature study, the experience from developing the game prototype and the results gathered from the play testing and questionnaire.
 
+\subsection{Research Goal 1: Collaboration}
+The first research goal was all about the collaboration and social interaction between players and was defined with the accompanied research questions as:
+\begin{description}
+	\item[RG1:] The purpose of this project is to create a collaborative game prototype which promotes collaboration and social interaction from the point of view of a game designer in the context of video game design.
+	\item[RQ1.1:] What game mechanics are suitable for stimulating collaboration between players?
+	\item[RQ1.2:] How can the game be designed to encourage social interaction between players?
+\end{description}
+From the game prototype (details in Chapter \ref{chp:design}) and from the experiment (details in Chapter \ref{chp:play_test}) it was clear that having the two players play different roles with different functions had a big impact on the collaboration between the players. With the players having different functions a dependency was created between the players as they could not do everything  by themselves. The function of having the character being able to pick up items that the hand could then place in the world created a bond between the players where they could help each other out. Dangerous elements like spikes and enemies that threatened the character were another way to create a bond between the character and the hand - the hand could protect the character from danger by blocking spikes with items and luring the enemies away with bait. This created more social interaction between the players where they would request or offer help to the other player. The puzzle aspect of the game also encouraged social interaction, as the players would think out loud and give directions to each other in order to solve the puzzles. A particularly interesting game element were the different switches that controlled coloured boxes and moving platforms. The players would try out the different switches, which was one of the key elements to solving the puzzles. The players would often discuss which switches were the correct ones to activate to solve the puzzle.
 
+\subsection{Research Goal 2: Children's Experience}
+The second research goal focused on the children's experience with the game prototype and how they would react to a collaborative game - it was defined with two research questions as follows:
+\begin{description}
+		\item[RG2:] The purpose of this project is to see how children experience a collaborative game where the focus is on collaboration and social interaction from point of view of the children in the context of playing video games.
+		\item[RQ2.1:] Is a collaborative game that encourages social interaction engaging for children?
+		\item[RQ2.2:] How does the children's gender or game experience affect their experience of collaborative game with focus on collaboration and social interaction?
+\end{description}
+The results from the questionnaire were analysed in Chapter \ref{chp:analysis}, and shows that the game prototype were engaging for the children that participated in the play testing. Everyone saw the importance in collaboration and communication for progressing in the game. The questionnaire was created with Sweetser's \cite{sweetser2005gameflow} GameFlow model in mind for better review of the game prototype. The results from the GameFlow analysis shows that the game prototype was good at capturing the concentration of the children, the feedback from the game was good, the children got easily immersed in the game, and the social interaction was good. The GameFlow analysis also uncovered that the game prototype's areas for improvement were in goal clarity, challenge, and autonomy.
+
+With regards to the gender and game experience of the children, a few differences were noticed. The males found the game to be less challenging and showed a greater understanding of the game compared to the females by understanding the goal of the game more easily, and recognizing when they did things correct or wrong in the game. The male participants also seemed to get more immersed in the game by experiencing time going by fast, and found the game less challenging to a greater degree than the female participants. The males were also more competitively inclined despite the collaborative nature of the game. There were similar results for the children's prior game experience. Children with more game experience found it easier to understand the goal of the game, were more competitively inclined, and got more immersed in the game. However the participants with only some prior game experience found the game to be more adequately challenging.
+
+\subsection{Research Goal 3: Game Development}
+The third and final research goal was intended to explore the various technologies available for an independent video game developer, described with research questions as:
+\begin{description}
+	\item[RG3:] The purpose of this study is to investigate what tools are available to create video games from the point of view of an independent developer in the context of video game design. 
+	\item[RQ3.1] What tools are available for developing video games as an independent developer.
+	\item[RQ3.2] Can proprietary controllers made for game consoles be used to develop games for the PC?
+\end{description}
+There are many technologies that support the independent video game developer in creating video games, as discribed in Chapter \ref{chp:technology}, with the most important being the game engine. Game engines lessen the burden of the game developer by handling common video game functionality like rendering, physics, lighting, and networking. Two of the most popular game engines are Unreal Engine 4 and Unity3D 5 - these game engines have big online communities that can provide help and information. The entry level for these game engines are free so any aspiring game developer can test their skills in video game development without monetary risk. There are also free software tools available like IDEs for managing and writing source code, and version control systems for keeping track of the games history and for preventing loss and corruption of code. Game assets such as sound and graphics are also available online with both free and paid options, there are even possibilities for hiring a graphic or sound designer online. The assets for the game prototype in this project come from free online resources, details in Section \ref{sec:chosen_tech}.
+
+From the experience of developing the game prototype, using proprietary controllers made for consoles on the PC is not a straightforward process. With some of the controllers not providing official APIs it can be difficult to get the controllers to work in the desired environment. This was experienced while trying to get the PlayStation Move controller to work with Unreal Engine 4, more details in Section \ref{sec:dev_limitations}. The Move controller was abandoned because of complications when integrating it in the game prototype. \note{Vurderte å skrive et lite delkapittel om de andre devicene og hvilke drivere osv som var tilgjengelig for dem i kapittel 6 om video game technology og nevne det her.}
+	
+	
 \section{Evaluation of Technology}
+\note{Her skal jeg skrive litt om mine erfaringer med å jobbe med unreal move etc.}
+%Hvordan var det å jobbe med unreal
+%Hvordan jeg håndterte move osv.
 
 
 \section{Evaluation of the Game Prototype}
+\label{sec:eval_game}
+\note{Her skal jeg evaluere spill prototypen, gå litt igjennom hva som var bra og hva som burde endres/utvides, med utgangspunkt i resultatene til spørreundersøkelsen. Kanskje nevne andre mulige målgrupper for spillet/ andre muligheter.}
+%hva syns jeg om resultatet
+%Ville jeg gjor noe anderledes
+%Ikke bare for barn
+
+
+\section{Evaluation of Project}
+\note{Skrive litt om hvordan det var å jobbe med et stort prosjekt aleine. Hvordan veildeningen gikk og påvirket arbeidet. Hva jeg har lært fra prosjektet, og litt om hvordan det var å jobbe med/utvikle spill for barn.}
+%Hvordan var det å jobbe aleine
+%alf inge hjalp ganske bra
+%Hva har jeg lært fra dette
+%hvordan var det å jobbe med barn
