--- a/doc/report/conclusion/chp_further_work.tex
+++ b/doc/report/conclusion/chp_further_work.tex
@@ -1,7 +1,13 @@
 \chapter{Further Work}
 \label{chp:further_work}
-% bullet liste istedet, kan se på det.
-\section{Extra Game Features}
-\section{Different Experiments}
-\section{Different Interaction Devices}
-\section{Release Game}
+This final chapter ends the thesis by providing a list of areas for further work.
+\note{burde disse punktene utvides mer? har du noen forslag til nye punkter?}
+\begin{itemize}
+	\item Improving the game prototype by addressing the issues discussed in Section \ref{sec:eval_game}.
+	\item Adding new items and features to the game prototype.
+	\item Trying out various interaction devices to se how the dynamics of the game and social interaction are affected.
+	\item Exploring various platforms like mobile gaming.
+	\item Conducting more experiments with a larger group of children.
+	\item Exploring other target audiences, for example adults, and conducting experiments.
+	\item Release and distribute the game.
+\end{itemize}
