--- a/doc/report/experiment/chp_preparations.tex
+++ b/doc/report/experiment/chp_preparations.tex
@@ -9,11 +9,12 @@ Bente Sandø the leader of the after school programme for Buvik School was conta
 
 
 \section{Questionnaire}
-A questionnaire was developed in order to evaluate the results of the play testing. The questionnaire is based of the gameflow framework \cite{sweetser2005gameflow}, and the questionnaire created by Fu et al \cite{fu2009egameflow}. The questions are divided into groups corresponding to the gameflow categories: Concentration, a. The final version of the questionnaire can be seen in Table \ref{tab:questions}. The questions were tailored towards children by simplifying them and making them easier to understand. Gameflow is discussed in section \ref{immersionGameflow}.
+\label{sec:questionnaire}
+A questionnaire was developed in order to evaluate the results of the play testing. The questionnaire is based of the Gameflow framework \cite{sweetser2005gameflow}, and the questionnaire created by Fu et al \cite{fu2009egameflow}. The questions are divided into groups corresponding to the Gameflow categories: Concentration, Goal Clarity, Feedback, Challenge, Autonomy, Immersion, Social Interaction, and Game Enjoyment. The final version of the questionnaire can be seen in Table \ref{tab:questions}. The questions were tailored towards children by simplifying them and making them easier to understand. Gameflow is discussed in Section \ref{immersionGameflow}.
 
-Note: the questions were asked verbally to the children, in Norwegian, and their answers were logged by the interviewer. The original Norwegian questionnaire is included in Appendix X.
+Note: the questions were asked verbally to the children, in Norwegian, and their answers were logged by the interviewer. The original Norwegian questionnaire is included in Appendix \ref{apx:nor_questionnaire}.
 
-\begin{table}[]
+\begin{table}[!ht]
 	\centering
 	\caption{The questions from the questionnaire}
 	\label{tab:questions}
@@ -26,7 +27,7 @@ Note: the questions were asked verbally to the children, in Norwegian, and their
 		Q2          & It was easy to understand the goal of the game                 \\ \hline
 					& \textbf{Feedback}                                              \\ \hline
 		Q3          & It is easy to understand when I do something wrong in the game \\
-		Q4          & It is easy to understand when I do something good in the game  \\
+		Q4          & It is easy to understand when I do something correct in the game  \\
 		Q5          & I liked the graphics of the game                               \\
 		Q6          & I liked the sounds of the game                                 \\ \hline
 					& \textbf{Challenge}                                             \\ \hline
