--- a/doc/report/experiment/chp_results_and_analysis.tex
+++ b/doc/report/experiment/chp_results_and_analysis.tex
@@ -1,12 +1,11 @@
 \chapter{Results and Analysis}
+\label{chp:analysis}
 This chapter presents the results of the play testing session along with observations that were made and analysis of the results.
 
 
 \section{Results}
 Table \ref{tab:simple_results} shows the agreement and disagreement of the questions that were asked. For simplicity's sake, agreement and strong agreement have been aggregated, likewise with disagreement and strong disagreement.
-For more detailed information regarding the results, like statistical mean, variance and standard deviation of the questions from the questionnaire can be found in Appendix X. \note{insert appendix} The ages of the participants were ranging from six to nine years old with the composition being: six six year olds (32\%), five seven year olds (26\%), five eight year olds (26\%), and three nine year olds (16\%). Out of the total of 19 participants, 8 of them were female (44\%). Over half of the children told that they had a lot of prior game experience (58\%), seven said that they had some game experience (37\%), and one told that they had no prior game experience(5\%).
-
-%TODO: Endre tabellen til å være mye enklere, ha detaljer i appendix
+For more detailed information regarding the results, like statistical mean, variance and standard deviation of the questions from the questionnaire can be found in Appendix \ref{apx:stat_results}. The ages of the participants were ranging from six to nine years old with the composition being: six six year olds (32\%), five seven year olds (26\%), five eight year olds (26\%), and three nine year olds (16\%). Out of the total of 19 participants, 8 of them were female (42\%). Over half of the children told that they had a lot of prior game experience (58\%), seven said that they had some game experience (37\%), and one told that they had no prior game experience(5\%).
 
 \begin{table}[]
 	\centering
@@ -21,7 +20,7 @@ For more detailed information regarding the results, like statistical mean, vari
 		Q2          & It was easy to understand the goal of the game                 & 52,63\%        & 47,37\%           \\ \hline
 		\textbf{}   & \textbf{Feedback}                                              & \textbf{}      & \textbf{}         \\ \hline
 		Q3          & It is easy to understand when I do something wrong in the game & 78,95\%        & 21,05\%           \\ \hline
-		Q4          & It is easy to understand when I do something good in the game  & 89,47\%        & 10,53\%           \\ \hline
+		Q4          & It is easy to understand when I do something correct in the game& 89,47\%        & 10,53\%           \\ \hline
 		Q5          & I liked the graphics of the game                               & 100,00\%       & 0,00\%            \\ \hline
 		Q6          & I liked the sounds of the game                                 & 78,95\%        & 21,05\%           \\ \hline
 		\textbf{}   & \textbf{Challenge}                                             & \textbf{}      & \textbf{}         \\ \hline
@@ -55,16 +54,136 @@ This section describes some general observations that were made during the play 
 The majority of the children were very cooperative with each other and there were a lot of communication between them on things like how to conquer the different obstacles and what to do next. Learning the controls of the alien and the hand character was the focus of the first level, but the movement for the alien character was more complex, which led to some players wanting to switch controllers. However on the following levels the tasks for the hand character were more complicated and the players often wanted to switch back to the hand character. The game was possibly a little too hard for the children that we tested, as some were struggling to beat the first level.  Despite this, most of the children thought the game difficulty was adequate and all of the players thought that the game was fun and would like to play it at home.
 
 
-\section{Analysis}
-\note{Trenger fullføring}
+\section{Analysis }
+\note{alt nytt i dette delkapitlet}
+The results from the questionnaire will be analysed and grouped into the different Gameflow elements that the questionnaire is based on. Then some differences in the children's background will be discussed and how that affected the results.
+
 \subsection{Concentration}
+All the participants agreed that they were concentrated while playing the game. This corresponds to the observations that were made, everyone seemed to be focused on the game.
+
 \subsection{Goal Clarity}
+About half of the participants agreed that it was easy to understand the goal of the game. This number is lower than desired and might be due to the fact that the game had no overall purpose or story. This might also be due to the difficulty of the game being a little too challenging; there should have been some easier introductory levels to explain the game mechanics better.
+
 \subsection{Feedback}
+The feedback from the game to the players was appropriate - they knew when they did something wrong, and when they did something correct. The graphics and audio was very well received with the participants. There was an issue where two of the first participants played without sound, but this was shortly fixed.
+
 \subsection{Challenge}
+The challenge for the game was a little higher than desired. Around half of the participants found the challenge to be adequate, but over a third of the participants found the game too challenging. This was in part due to the first level being a little too difficult. There should have been more introductory levels for the players to learn the game mechanics. It is also hard to predict the skill level of children around that age, as some found the game to be very easy and struggled very little. It might also come down to time constraints. The participants were given about 15 minutes to play the game and almost everyone said that they got better at the game after playing for a while. There were also some issues with input lag that occurred for  which negatively affected the difficulty of the game. This affected a total of six participants, where five of them reported that the game was too difficult. Both of the players that disagreed that their skill improved, was negatively affected by the lag.
+
 \subsection{Autonomy}
+About two thirds of the participants said that they felt in control of the player, and that it was possible to recover from errors. These numbers were negatively affected by the input lag that was experience on one of the laptops. Five of the six participants affected by the lag disagreed that they felt in control of the players movements. There was also a spot in the first level that was easy to get trapped in. The spot was hard to get out of and the and should be considered as a flaw in the level design.
+
 \subsection{Immersion}
+Most of the participants got immersed in the game and agreed that time went by quickly when playing the game. The majority also primarily focused on the game, and became unaware of their surroundings. Some participants however were interested in the other pair that was playing and got a little distracted by trying to see how far the other players had come. Overall the game seemed to grab the attention of the participants.
+
 \subsection{Social Interaction}
+The social interaction between the participants was good. They all agreed that it was important to communicate and cooperate when playing the game. The participants were eager to communicate, and provide directions and help to each other. One of the pairs that performed the best had a very direct form of communication by issuing commands to each other, like "stand there" and "grab that". There were also a lot of pointing to the screen to tell the other player where to stand or place a block and similar. Being a collaborative game it was not very surprising to se that most did not se the game as a competition. However, some participants said that they did feel like they were competing against others to get the furthest. This was also made apparent when some participants would ask us how far some other players had made it, and some even stayed to see how the other participants did.
+
 \subsection{Game Enjoyment}
-\subsection{Background Differences}
+All of the participants strongly agreed that they enjoyed playing the game. Though it would seem that the game is very fun to play, it is important to look at it from a broader perspective. This was a special occasion, and the children may not get to play that much video games in the after school program. Everyone seemed excited to even get a chance to play the game. The participants would also like to play the game at home, and some even asked where the game could be bought.
+
+\subsection{Gender Differences}
+There were a total of eleven males and eight female participants. Table \ref{tab:gender_diff} shows the differences in responses between the male and female participants. Only the agreement is shown for simplicity, but because of the binary nature of the questionnaire, the disagreement is the opposite of the agreement. Only the questions that had a significant difference in the responses have been included (a difference greater than 10 percentage points).
+
+Unfortunately, half of the female participants played on the laptop that had a considerable amount of input lag, which might skew the results some. Overall the males seemed to respond with a better understanding of the game, they agreed more that it was easy to understand the goal and easy to understand when they did something correct or wrong. The game sounds appealed more to the female participants, but two male participants played without sound, which skews the results a little. There was also a tendency where more of the female participants responded that the game was to hard compared to the males. All but two participants felt that their skill improved when playing the game, both of these participants were female and both experienced lag while playing, which negatively affected their responses. Similarly the majority of the male participants agreed that they felt in control of the movements, and could recover from errors, the majority of the females disagreed. This might also be attributed to lag. The sense of cooperation also seems to have been affected by lag as the two female participants that disagreed that the cooperation was good, both experienced lag and said that it was hard to cooperate. More of the males seemed to feel that time went by fast compared to the females, and were also more competitive with others to reach the furthest.
+
+
+\begin{table}[ht]
+	\centering
+	\caption{The results showing the gender differences in the responses}
+	\label{tab:gender_diff}
+	\begin{tabularx}{\textwidth}{|l|X|l|l|}
+		\hline
+		& \textbf{}                                                      & \textbf{Male}  & \textbf{Female} \\ \hline
+		\textbf{ID} & \textbf{Question}                                              & \textbf{Agree} & \textbf{Agree}  \\ \hline
+		& \textbf{Goal Clarity}                                          &                &                 \\ \hline
+		Q2          & It was easy to understand the goal of the game                 & 63,64\%        & 37,50\%         \\ \hline
+		& \textbf{Feedback}                                              &                &                 \\ \hline
+		Q3          & It is easy to understand when I do something wrong in the game & 90,91\%        & 62,50\%         \\ \hline
+		Q4          & It is easy to understand when I do something good in the game  & 100,00\%       & 75,00\%         \\ \hline
+		Q6          & I liked the sounds of the game                                 & 63,64\%        & 100,00\%        \\ \hline
+		& \textbf{Challenge}                                             &                &                 \\ \hline
+		Q7          & I get bored when playing the game                              & 18,18\%        & 0,00\%          \\ \hline
+		Q8          & The game was too easy                                          & 27,27\%        & 0,00\%          \\ \hline
+		Q10         & The game was too hard                                          & 27,27\%        & 50,00\%         \\ \hline
+		Q11         & My skill gradually improved when playing the game              & 100,00\%       & 75,00\%         \\ \hline
+		& \textbf{Autonomy}                                              &                &                 \\ \hline
+		Q12         & I felt in control of the movements of the player               & 90,91\%        & 37,50\%         \\ \hline
+		Q13         & I could recover from errors I made in the game                 & 90,91\%        & 37,50\%         \\ \hline
+		& \textbf{Immersion}                                             &                &                 \\ \hline
+		Q14         & Time goes by fast when plaing the game                         & 90,91\%        & 75,00\%         \\ \hline
+		& \textbf{Social Interaction}                                    &                &                 \\ \hline
+		Q16         & I was competing with others to reach the furthest              & 36,36\%        & 25,00\%         \\ \hline
+		Q19         & I cooperated well with the other player                        & 100,00\%       & 75,00\%         \\ \hline
+		Q20         & The other player cooperated well with me                       & 100,00\%       & 75,00\%         \\ \hline
+	\end{tabularx}
+\end{table}
+
+\subsection{Game Experience}
+Out of the total 19 participants, eleven responded that they had a lot of prior game experience, seven said that they had some game experience, and one said that they had no prior game experience. Table \ref{tab:game_experience} shows the effect of game experience on the results. About half of the participants with a lot of gaming experience were male (55\%male), and about half of the participants with some gaming experience were male (57\% male). This means that the gender differences will not influence the results to a great degree. Because there was only one participant with no prior game experience their results will either be agree (100\%) or disagree(0\%), which is important to keep in mind when comparing the results. 
+
+Understandably the participants with more game experience found it easier to understand the goal of the game. This could come from their familiarity with side scrollers.
+The participants with a lot of game experience seemed to enjoy the sounds of the game less, however both of the participants that played without sound stated that they had a lot of game experience. When disregarding those two participants the results are a lot more similar with a difference of only two percentage points.
+The challenge seemed to be more adequate for the participants with some game experience compared to the ones with a lot of game experience. One reason for this might be that their inexperience with video games might make them less able to judge the challenge of the game, and would incline them to judge the challenge as adequate. The differences in the results of Question 11, are attributed to lag, as the only participants that disagreed were affected by lag.
+The participants with a lot of game experience got more immersed while playing, and felt that time went by fast while playing, whereas only about half of the ones with some game experience agreed. This could indicate that the children with more game experience find it easier to get immersed in the game.
+Participants with a lot of game experience responded that they were competing with others more than the ones with only some game experience. This could be because they were more used to the competitive nature of video games.
+The with regards to the cooperation is attributed to lag, as the two participants that disagreed that the cooperation was good between the players said that it was hard to cooperate due to the lag.
+
+
+\begin{table}[ht]
+	\centering
+	\caption{The results showing effect of game experience on the responses}
+	\label{tab:game_experience}
+	\begin{tabularx}{\textwidth}{|l|X|l|l|l|}
+		\hline
+		\textbf{}   & \textbf{Game Experience}                                       & \textbf{A lot} & \textbf{Some}  & \textbf{None}  \\ \hline
+		\textbf{ID} & \textbf{Question}                                              & \textbf{Agree} & \textbf{Agree} & \textbf{Agree} \\ \hline
+		& \textbf{Goal Clarity}                                          &                &                &                \\ \hline
+		Q2          & It was easy to understand the goal of the game                 & 63,64\%        & 42,86\%        & 0,00\%         \\ \hline
+		& \textbf{Feedback}                                              &                &                &                \\ \hline
+		Q3          & It is easy to understand when I do something wrong in the game & 63,64\%        & 100,00\%       & 100,00\%       \\ \hline
+		Q6          & I liked the sounds of the game                                 & 72,73\%        & 85,71\%        & 100,00\%       \\ \hline
+		& \textbf{Challenge}                                             &                &                &                \\ \hline
+		Q8          & The game was too easy                                          & 18,18\%        & 14,29\%        & 0,00\%         \\ \hline
+		Q9          & The game was adequately difficult                              & 45,45\%        & 71,43\%        & 100,00\%       \\ \hline
+		Q10         & The game was too hard                                          & 36,36\%        & 28,57\%        & 100,00\%       \\ \hline
+		Q11         & My skill gradually improved when playing the game              & 100,00\%       & 71,43\%        & 100,00\%       \\ \hline
+		& \textbf{Immersion}                                             &                &                &                \\ \hline
+		Q14         & Time goes by fast when plaing the game                         & 100,00\%       & 57,14\%        & 100,00\%       \\ \hline
+		Q15         & I become unaware of my surroundings when playing the game      & 81,82\%        & 100,00\%       & 100,00\%       \\ \hline
+		& \textbf{Social Interaction}                                    &                &                &                \\ \hline
+		Q16         & I was competing with others to reach the furthest              & 36,36\%        & 14,29\%        & 100,00\%       \\ \hline
+		Q19         & I cooperated well with the other player                        & 81,82\%        & 100,00\%       & 100,00\%       \\ \hline
+		Q20         & The other player cooperated well with me                       & 81,82\%        & 100,00\%       & 100,00\%       \\ \hline
+	\end{tabularx}
+\end{table}
+\subsection{Control Differences}
+The participants played two different figures, the hand and the character and there were a few differences in the responses between the two. ten players controlled the character and nine players controlled the hand. Table \ref{tab:control_diff} shows the difference in the responses between the players.
+
+Most of the results were similar, and this might be because of the pairwise testing. Since the players played in pairs of two the players had a similar game experience, and the pars seemed to respond in a similar fashion. Because the participants were asked simultaneously they might even have influenced each other with their choices. There were some minor differences however; the players that controlled the character found it easier to understand the goal of the game. This could be attributed to the fact that it was the character that had to reach the goal in each level - maybe the hand also should have had a goal to reach. The character was probably also more familiar to the participants as the concept of running around and collecting coins is a common video game concept. An interesting thing to note is that the participants that controlled the hand  judged the difficulty as more adequate and less hard or easy. This could indicate that the difficulty for the character was a little to challenging for the children, and it might be a result of the hand not really being in any risk of dying.
+\begin{table}[ht]
+	\centering
+	\caption{The results showing the difference in responses between the players}
+	\label{tab:control_diff}
+	\begin{tabularx}{\textwidth}{|l|X|l|l|}
+		\hline
+		& \textbf{Character/Hand}                        & \textbf{Character} & \textbf{Hand}  \\ \hline
+		\textbf{ID} & \textbf{Question}                              & \textbf{Agree}     & \textbf{Agree} \\ \hline
+		& \textbf{Goal Clarity}                          &                    &                \\ \hline
+		Q2          & It was easy to understand the goal of the game & 60,00\%            & 44,44\%        \\ \hline
+		& \textbf{Challenge}                             &                    &                \\ \hline
+		Q8          & The game was too easy                          & 20,00\%            & 11,11\%        \\ \hline
+		Q9          & The game was adequately difficult              & 50,00\%            & 66,67\%        \\ \hline
+		Q10         & The game was too hard                          & 40,00\%            & 33,33\%        \\ \hline
+	\end{tabularx}
+\end{table}
 
 \section{Summary}
+The questionnaire provided a lot of information about the children's experience with the video game prototype.
+%notable differences from gameflow
+With regards to GameFlow, the game successfully grabbed the attention of the players and everyone agreed that they were concentrated while playing. The goal clarity was not as good and could be better explained through a story and with easier introductory levels. The feedback from the game to the players was appropriate and they had a good grasp on when they did something correct or wrong. The majority also enjoyed the graphics and sound of the game. Concerning challenge, the children experienced the challenge a little more difficult than desired. The challenge could have been eased by including more introductory levels, and letting the children play for longer. Overall the autonomy of the game was decent and the majority of the participants felt in control of the game. However, the autonomy, challenge, and to a degree social interaction were all affected by input lag on one of the laptops. Most of the participants got immersed in the game, with the children not focusing on their environment and having a feeling of time going by quickly. The social interaction between the participants was good and they all agreed that it was important to communicate and cooperate. All of the children also enjoyed the game and would like to play it in their homes.
+
+Some differences in the responses could also be seen when considering the gender and prior game experience of the children, and also what player they were controlling. The male participants seemed to have a better understanding of the game and found the challenge to be easier compared to the female participants. The males also got more immersed in the game and felt that time went by quickly. Participants with more game experience found it easier to understand the goal of the game and were more easily immersed in the game. Game experience also seemed to have an effect on competitiveness, where the players with more game experience were more competitively inclined. The results from the participants that controlled the hand and the ones that controlled the character were very similar due to the pairwise testing. However, a difference was that the participants controlling the hand found it harder to understand the goal of the game, but thought the challenge was more adequate compared to the participants controlling the character.
+%differences from gender
+%differences from game experience
+%differences from controls
