--- a/doc/report/experiment/chp_the_test.tex
+++ b/doc/report/experiment/chp_the_test.tex
@@ -9,15 +9,15 @@ This number is quite inflated, because it does not take into account setup and c
 
 
 \section{Execution}
-The setup for the play testing started at 2PM, in a medium sized room where two laptops were stationed with two controllers each. There were some small issues in the beginning, where the laptops was not recognizing the controllers, and the USB ports on one of the laptops were not working. One laptop also didn't have the most updated game prototype, so it had to be updated, but the issues were eventually solved. About 15-20 went to organizing the room and solving the initial problems.
+The setup for the play testing started at 2PM, in a medium sized room where two laptops were stationed with two controllers each. There were some minor issues in the beginning, where the laptops were not recognizing the controllers, and the USB ports on one of the laptops were not working. One laptop also did not have the most updated game prototype, so it had to be updated, but the issues were eventually solved. About 15-20 minutes went to organizing the room and solving the initial problems.
 
-After fixing the starting problems the children were sent in four at the time, two on each computer where they played for about 15 minutes each. After that the children were interviewed, and the next set of children were sent in.
+After fixing the starting problems, the children were sent in four at the time, two on each computer where they played for about 15 minutes each. After that the children were interviewed, and the next set of children were sent in.
 
 The children were explained the basic rules and controls of the game, and were then observed for how they would try to solve the different levels. If they got stuck for a while, they would be helped, but they were mostly without input aside from the occasional hint. Figure \ref{fig:testing1} shows the play testing on one of the laptops.
 
 \hfigure{testing1}{The children received some hints if they were struggling}{1}
 
-A problem occurred with one of the laptops, where the game would start to drop frames and the players experienced considerable input lag. This started after the first pair of children and persisted for the rest of the testing. Therefore towards the middle of the testing this computer was deemed too unplayable to accurately represent a proper experience of the game prototype and was discontinued for the rest of the testing. The issue is believed to be an artefact of a failing graphics card by the author.
+A problem occurred with one of the laptops, where the game would start to drop frames and the players experienced considerable input lag. This started after the first pair of children and persisted for the rest of the testing. Therefore towards the middle of the testing this computer was deemed too unplayable to accurately represent a proper experience of the game prototype and was discontinued for the rest of the testing. The issue is believed to be an artefact of a failing graphics card.
 
 Towards the end of the play testing session most of the children had been picked up from the after school program and the testing was terminated. There were in total about two hours of testing with a total number of 19 participants. The number is odd because one of the children was picked up in the middle of the play testing.
 
