--- a/doc/report/introduction/chp_introduction.tex
+++ b/doc/report/introduction/chp_introduction.tex
@@ -1,17 +1,15 @@
 \chapter{Introduction}
 The video game industry is one of the biggest entertainment industries in the world, and it has become a big part of people's lives, especially children, who are exposed to technologies like smart phones and tablets from an early age. 
 
-Video games come in all shapes and sizes, from being played on computers, video game consoles, smart phones, and even virtual reality headsets. There are also different types of video game developers ranging from big companies creating triple-A titles to small independent game companies and even individuals creating independent video games. 
+Video games come in all shapes and sizes, from being played on computers, video game consoles, smart phones, and even virtual reality headsets. There are also different types of video game developers ranging from big companies creating AAA-titles to small independent game companies and even individuals creating independent video games. 
 
-Today's technology makes it so that individuals and small teams can create video games that can reach millions of gamers online, without investing much more than just time. Big video game companies usually stick to tried and true video game types and interaction devices to reach as many people as possible and to generate the most revenue. Independent developers can on the other hand generally be more creative and innovative when creating video games, and create games that use unconventional interaction devices or game concepts.
+Today's technology makes it so that individuals and small teams can create video games that can reach millions of gamers online, without investing much more than just time. Big video game companies usually stick to well proven video game concepts and interaction devices to reach as many people as possible and to generate the most revenue. Independent developers can on the other hand generally be more creative and innovative when creating video games, and create games that use unconventional interaction devices or game concepts.
 
 Proprietary input devices like motion controls for video game consoles mostly use standard communication protocols like USB or Bluetooth, which can be used to interface with a computer with the help of official and unofficial driver software. 
 
-Social interaction is a big part of video games, with most games including a multiplayer mode, either local or online. Gaming can be a way to socialize with strangers to create new friendships, or with friends to strengthen (or ruin) friendships. It would be interesting to se how children can interact with each other when playing a collaborative game designed to encourage social interaction and collaboration.
+Social interaction is a big part of video games, with most games including a multiplayer mode, either local or online. Gaming can be a way to socialize with strangers to create new friendships, or with friends to strengthen (or ruin) friendships. It would be interesting to se how children can interact with each other when playing a collaborative game designed to encourage social interaction and stimulate collaboration.
 
 These are exciting areas for research that this thesis will delve into.
-
-\note{Feedback?}
 
 \section{Context}
 This report is an extension of work done in a specialization project where I and Kjell R. Elstad explored different game technologies and concepts that goes into creating innovative video games. I was interested and continuing this work and to create a game prototype of one of the game concepts that were created in the specialization project.
@@ -20,24 +18,26 @@ This report is an extension of work done in a specialization project where I and
 \section{Motivation}
 Video games have always been a big part in my life. I grew up playing video games and I still do on a daily basis. Having played a lot of video games, I am excited to specialize in a project where I can create my own video game and explore different game technologies and concepts.
 
-\note{Uferdig. nevne samarbeid mellom barn osv.}
+With the evolution of game technology video games have become accessible for anyone, and children are more exposed to video games from early childhood. I want to create a video game for children that forces them to work together, and encourages social interaction between the players. I want to expose children to a new kind of gameplay, where the players are dependent on each other in order to succeed.
+
+\note{La til den andre paragrafen}
 
 
 \section{Problem Description}
 The following problem description is based on the an earlier version given for the master's thesis:
 
 \begin{displayquote}
-	In this project, the goal is to prototype an innovative game(s) and test this game(s) on users. The innovation can be in the type of gameplay the game provides, how it combines various game genres, what technology is used to control or play the game, how the social interaction between players is supported, and the purpose of the game.
+	In this project, the goal is to prototype an innovative game and test this game on users. The game prototype shall be a collaborative game made for children, where the emphasis is on encouraging social interaction and stimulating collaboration. Innovation can be made in the type of gameplay the game provides, how it combines various game genres, what technology is used to control or play the game, how the social interaction between players is supported, and the purpose of the game.
 	
-	The first phase of the project will include a study of innovative games, game history, game technologies and game concepts, the second phase will be to implement one or more prototype, and the third phase will be to evaluate the concept through play-testing on real users.
+	The first phase of the project will include a study of game technologies, game concepts and interaction devices, the second phase will be to implement one or more prototype, and the third phase will be to evaluate the concept through play-testing on real users.
 \end{displayquote}
 
-The first phase of this project was covered in the specialization project. This master's thesis will cover the second and third phase of the overall project outline which covers game prototyping and play-testing.
-\note{burde jeg endre problembeskrivelsen for å inkludere barn og samarbeid?}
+This master's thesis will include a literature study, the creation of a game prototype, and the play testing of this prototype on real users.
+\note{Har skrevet om problembeskrivelsen litt for å inkludere barn og div.}
 
 \section{Structure}
 The structure of this thesis is divided into five parts which roughly correspond to the order of phases that this project went through.
-\note{Denne delen tenger litt overhaling}
+
 \begin{description}
 	\item[Part I: Introduction and Methodology]
 	The introduction provides the context and motivation behind the project, the problem statement and the structure of this report.
@@ -52,5 +52,6 @@ The structure of this thesis is divided into five parts which roughly correspond
 	The experimentation part presents the planning, execution, and results of the play testing that was performed.
 	
 	\item[Part V: Evaluation and Conclusion]
+	The final part concludes the thesis with an evaluation of the project, a conclusion, and a list of areas for further work.
 	
 \end{description}
