--- a/doc/report/references.bib
+++ b/doc/report/references.bib
@@ -688,9 +688,55 @@
 	note = "\url{https://docs.unrealengine.com/latest/INT/}, accessed 2016-06-07",
 }
 
+@misc{epicgames2016framework,
+	author = {Epic Games},
+	title = {Gameplay Framework Quick Reference},
+	year = "2016",
+	month = "06",
+	note = "\url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/QuickReference/}, accessed 2016-06-07",
+}
+
 @article{lazzaro2004we,
 	title={Why we play games: Four keys to more emotion without story},
 	author={Lazzaro, Nicole},
-	year={2004}
+	year={2004},
 	note = "\url{http://www.xeodesign.com/whyweplaygames/xeodesign_whyweplaygames.pdf}, accessed 2016-06-09",
+}
+
+@article{wang2015wear,
+	title={The wear out effect of a game-based student response system},
+	author={Wang, Alf Inge},
+	journal={Computers \& Education},
+	volume={82},
+	pages={217--227},
+	year={2015},
+	publisher={Elsevier}
+}
+
+@misc{kenney2016platformer,
+	title={Platformer Pack Redux},
+	author={Kenney Land},
+	year={2016},
+	note = "\url{http://www.kenney.nl/assets/platformer-pack-redux}, accessed 2016-06-13",
+}
+
+@misc{carty2015space,
+	title={Space Drifter},
+	author={TomCat Carty},
+	year={2015},
+	note = "\url{http://www.flashkit.com/loops/Ambient/Ambient/space-drifter-150305121007.html}, accessed 2016-06-13",
+}
+
+@misc{sonnis2016audio,
+	title={The License – \#GameAudioGDC Bundle},
+	author={Sonnis.com},
+	year={2016},
+	note = "\url{http://www.sonniss.com/gdc-bundle-license/}, accessed 2016-06-13",
+}
+
+@misc{jewelbeat2016audio,
+	title={Free Sound Effects},
+	author={JewelBeat.com},
+	year={2016},
+	note = "\url{http://www.jewelbeat.com/free/free-sound-effects-1.php}, accessed 2016-06-13",
 }
