--- a/doc/report/results/part_results.tex
+++ b/doc/report/results/part_results.tex
@@ -1,6 +1,7 @@
-\epigraphhead[400]{This part explains the design and implementation of the video game prototype that was developed for this thesis.}
+\epigraphhead[400]{This part describes the design and implementation of the video game prototype that was developed for this thesis.}
 
 \part{Design and Implementation}
+\label{prt:prototype}
 \input{results/chp_design}
 \input{results/chp_architecture}
 \input{results/chp_implementation}
