--- a/doc/report/study/chp_games_history.tex
+++ b/doc/report/study/chp_games_history.tex
@@ -3,8 +3,6 @@
 \label{ch:gameshistory}
 This chapter will explore the background of different video game technologies and how the industry has evolved. Games are being played by different kinds of people all over the world, and games can now be developed by a single person and reach these people through the internet. This chapter serves to give some information on how this came to be. The research presented here is based on work done by Overmars \cite{overmars2012}.
 
-\note{Ser dette greit ut?}
-
 \section{Casual Gaming}
 \label{sec:casualgaming}
 % Casual games
@@ -18,7 +16,7 @@ With the introduction of the iPhone (2007), the mobile gaming market started to 
 \section{Motion Controls}
 Nintendo was the company that pioneered motion controls for the consoles. They chose to create a less powerful console, the \gls{wii} in 2006, and catered to a more casual audience with cartoonish graphics, and games geared toward children. They also created a new controller, the Wiimote, that looked like a remote that could track the player's arm and hand movements (more about this controller in Section \ref{wiimote}). The most popular game was Wii Sports, shown in Figure \ref{fig:wiisports} that featured a collection of sports games that used the motion controller to play. Nintendo was more successful than the other consoles and had sold over 100 million consoles worldwide as of June 2014 \cite{2014nintendo}.
 
-Microsoft and Sony saw the success of the \gls{wii} and created their own motion control systems. Microsoft created a camera system that tracked the full body of the player, called the Kinect in 2010. Sony made a device similar to the Wiimote in 2010, called the Playstaton Move. The Move is a handheld remote like controller with a coloured light at the end and a camera to track the controller in 3D space. More information about the motion control devices in Chapter \ref{chap:interaction}
+Microsoft and Sony saw the success of the \gls{wii} and created their own motion control systems. Microsoft created a camera system that tracked the full body of the player, called the Kinect in 2010. Sony made a device similar to the Wiimote in 2010, called the Playstaton Move. The Move is a handheld remote like controller with a coloured light at the end and a camera to track the controller in 3D space. More information about the motion control devices in Chapter \ref{chap:interaction}.
 
 \hfigure{wiisports}{Wii Sports, a popular motion controlled game}{0.7}
 
@@ -32,7 +30,7 @@ Microsoft and Sony released their consoles at the same time for the 2013 holiday
 
 Sony focused on the games themselves and created a powerful console. The \gls{ps4} has features like game streaming, which makes it possible to stream games from a \gls{ps4} to a phone or tablet. The \gls{ps4} also has support for their motion control system Move. Sony also focused on social interaction by being able to share screen shots and game clips with a share button on the controller \cite{2013sony}. Sony continued one of their top game series with Killzone Shadow Fall at launch \cite{2013kotaku}.
 
-The \gls{xbone} and the \gls{ps4} have a lot of similar features. They both have the support for game streaming to Twitch and Ustream, and can record game clips as you play. Both consoles also support third party applications such as Netflix and YouTube. The consoles are becoming more about entertainment than just about the games. Gamers want to have access to the internet from their couch without having to use the computer. Downloadable games is also a popular feature, where all the games are available as a digital download instead of buying a game disc \cite{2015ign}. Even though the \gls{xbone} and \gls{ps4} support the motion control systems from the previous generation, they never really reached the success of the WiiMote. In recent years these motion control system have started to fade in popularity, but some niche areas still remain, such as fitness, dance, and party games. \cite{2015gameon, 2014hardcore, 2014sciencebeta}
+The \gls{xbone} and the \gls{ps4} have a lot of similar features. They both have the support for game streaming to Twitch and Ustream, and can record game clips as you play. Both consoles also support third party applications such as Netflix and YouTube. The consoles are becoming more about entertainment than just about the games. Gamers want to have access to the internet from their couch without having to use the computer. Downloadable games is also a popular feature, where all the games are available as a digital download instead of buying a game disc \cite{2015ign}. Even though the \gls{xbone} and \gls{ps4} support the motion control systems from the previous generation, they never really reached the success of the WiiMote. In recent years these motion control system have started to fade in popularity, but some niche areas still remain, such as fitness, dance, and party games \cite{2015gameon, 2014hardcore, 2014sciencebeta}.
 
 \hfigure{codghosts}{Call of Duty Ghosts, a popular launch title for the Xbox One and PlayStation 4}{0.7}
 
@@ -53,4 +51,6 @@ Video game consoles have become more of a home entertainment device with the abi
 %digital
 In recent years there has been a shift towards digital distribution which has enabled independent game developers to create games for the masses.
 
-\note{Feedback? skal jeg binde dette litt mer til oppgaven her?}
+It is interesting to see the shift towards more casual gaming and the fact that independent developers can create games for the newest game consoles and the PC. This is helpful for the project because the technology has evolved in such a way to make it possible for a single developer to create a video game to be played on the PC or the newest game consoles.
+
+\note{Prøvde å legge til litt her for å binde det litt mer opp mot oppgaven.}
