--- a/doc/report/study/chp_interaction_devices.tex
+++ b/doc/report/study/chp_interaction_devices.tex
@@ -2,11 +2,10 @@
 \label{chap:interaction}
 An important part of playing a game is being able to interact with it. The motivation for this chapter is to discover various interaction devices that could be used with the game prototype. This chapter will provide insight into what types of interaction devices can be used to interact with video games.
 
-\note{Er denne introen ok?}
-% se på forskjellige interaction devices for å se hva som kan brukes.
-
 
 \section{Conventional Interaction Devices}
+Conventional interaction devices are interaction devices that have been the most commonly used for video games.
+
 \subsection{Joystick}
 With the introduction of game consoles came the need for a more standardized device for interacting with games.
 The versatile joystick has been an important part of fulfilling this need.
@@ -14,13 +13,13 @@ A joystick, along with one or two buttons, was normal for the early consoles.
 Atari 2600 is one such example, shown in Figure \ref{fig:atari2600}.
 Later it has become a small, but important part of most controllers as a thumbstick.
 \hfigure{atari2600}{The joystick used for the Atari 2600}{0.7}
+
 \subsection{Gamepad}
 As games became more complex, requirements for the controller also increased.
 More buttons and new elements were added and the joystick eventually reappeared as one or more thumbsticks on the gamepad.
 This section describes how the gamepad has changed throughout the years and how it has changed the way games are played.
 A paper written by Cummings \cite{cummings2007evolution} on the subject is the primary source for this section.
 
-% \gls{nes}, gamepad, d-pad, why it was successful % cite evolution
 \gls{nes} was one of the first systems to use the gamepad.
 It had two buttons and a \gls{dpad}.
 One of the primary advantages of a joystick is in its ability to give analogue feedback.
@@ -67,6 +66,8 @@ A good example of how well the keyboard and mouse setup can be for some genres, 
 
 
 \section{Motion Control Devices}
+Motion controls devices became popular in the mid to late  2000s and are supported by the current generation of video game consoles. This section describes the motion control systems for the three major game consoles.
+
 \subsection{Nintendo Wiimote}
 \label{wiimote}
 %TODO write more about how these things changed gameplay
@@ -179,6 +180,8 @@ Dancing is another common example, where the position of the player's feet on th
 More recent games has also used cameras or motion detection controllers.
 
 \section{Summary}
-There is a multitude of ways of interacting with a video game, this chapter has explored the most common devices such as keyboards and gamepads, and also more specialized game controllers like light guns and plastic instruments. Using different interaction devices provides different experiences for the player and can be a big factor in the enjoyment and immersion in a video game. This information will prove useful when deciding on what interaction devices to use for the game prototype to be developed.
-\note{feedback?}
+There is a multitude of ways of interacting with a video game, this chapter has explored the most common devices such as keyboards and gamepads, and also more specialized game controllers like light guns and plastic instruments. Using different interaction devices provides different experiences for the player and can be a big factor in the enjoyment and immersion in a video game. 
+
+This information will prove useful when deciding on what interaction devices to use for the game prototype to be developed. Motion control devices like the PlayStation Move seem like a promising way to create a different game dynamic which could be engaging for children to use.
+\note{Prøvde å endre litt her for å lage litt frampeik.}
 %ha med hva som er mest aktuelt for oppgaven.
