--- a/doc/report/introduction/chp_methodology.tex
+++ b/doc/report/introduction/chp_methodology.tex
@@ -1,15 +1,16 @@
 \chapter{Methodology}
-The research method used in this project is based on the \gls{gqm} approach \cite{1992basili}, where firstly a research goal is defined (conceptual level), secondly the goal is decomposed into research questions (operational level), and lastly the research questions are described by a set of metrics that answers the research questions (quantitative level).
+The research method used in this project is based on the \gls{gqm} approach \cite{1992basili}, where firstly a research goal is defined (conceptual level), secondly the goal is decomposed into research questions (operational level), and lastly the research questions are described by a set of metrics that answers the research questions (quantitative level). Through the GQM approach three main research goals will be specified which represents the areas that will be investigated and drive the research through this thesis.
 
-\note{trenger feedback på dette kapittelet.}
+\note{Har endra litt her, spesielt RG1 + RQs til RG1. Fokuserer litt mer på social interaction, ikke så mange RQs som er like.}
 
 
 \section{Research Goals}
 The following research goals were developed using the template for research goals of the \gls{gqm} framework.
+
 \begin{description}
-	\item[RG1:] The purpose of this project is to create a collaborative game prototype where two players have different roles to encourage collaboration between players and to experiment with social interaction between players in the context of video game design.
+	\item[RG1:] The purpose of this project is to create a collaborative game prototype which promotes collaboration and social interaction from the point of view of a game designer in the context of video game design.
 	
-	\item[RG2:] The purpose of this project is to see how children experience a collaborative game prototype where two players have different roles to find out if this is an enjoyable and entertaining experience from the point of view of the children in the context of playing video games.
+	\item[RG2:] The purpose of this project is to see how children experience a collaborative game where the focus is on collaboration and social interaction from point of view of the children in the context of playing video games.
 	
 	\item[RG3:] The purpose of this study is to investigate what tools are available to create video games from the point of view of an independent developer in the context of video game design. 
 \end{description}
@@ -27,20 +28,42 @@ The following research goals were developed using the template for research goal
 \section{Research Questions}
 The research goals are broken down into research question according to the \gls{gqm} framework.
 \subsection{Research Goal 1: Collaborative Game}
+These research questions focuses on the creation of a video game that stimulates collaboration and encourages social interaction between players.
+
 \begin{description}
-	\item[RQ1.1:] What game mechanics are suitable for a game with two different roles?
-	\item[RQ1.2:] How can the engagement of both player be equally balanced when they have different roles?
-	\item[RQ1.3:] How can the game be designed to create a strong dependency between the two players.
+	\item[RQ1.1:] What game mechanics are suitable for stimulating collaboration between players?
+	
+	With this question, the intention is to discover various game mechanics that can will engage both players and encourage collaboration.
+	
+	\item[RQ1.2:] How can the game be designed to encourage social interaction between players?
+		
+	The focus of this question is to find out how the game can use game mechanics and controls to encourage social interaction.
+	
 \end{description}
+
 \subsection{Research Goal 2: Children's Experience}
+The intention of these research questions is to study find out how children will experience a video game where social interaction and collaboration is encouraged.
+
 \begin{description}
-	\item[RQ2.1:] Is a collaborative game with different roles engaging for children?
-	\item[RQ2.2:] Does the children's gender or game experience affect game enjoyment, concentration, or engagement in a collaborative game with different roles?
+	\item[RQ2.1:] Is a collaborative game that encourages social interaction engaging for children?
+	
+	This question is meant to gauge children's interest for a collaborative game that encourages social interaction.
+	
+	\item[RQ2.2:] How does the children's gender or game experience affect their experience of collaborative game with focus on collaboration and social interaction?
+	
+	The intention behind this question is to determine if  the gender or game experience of the children have an effect on their experience the game prototype.
 \end{description}
+
 \subsection{Research Goal 3: Game Development}
+These last research questions focuses on the development of a video game and what tools are available for independent video game developers.
 \begin{description}
 	\item[RQ3.1] What tools are available for developing video games as an independent developer.
+	
+	The objective of this question is to discover what tools are available for developing video games as an independent developer. 
+	
 	\item[RQ3.2] Can proprietary controllers made for game consoles be used to develop games for the PC?
+	
+	The purpose of this question is to determine if proprietary game controllers made for game consoles can be used when developing games for the PC.
 \end{description}
 	
 
@@ -48,14 +71,14 @@ The research goals are broken down into research question according to the \gls{
 %litteratur studie:
 This section explains the different methods used in this project to be able to answer the research questions. 
 
-\subsection{Litterature Study}
-A literature study will be conducted which will explore different aspects of video game development. This includes first, an evolution of game technology to provide context and background for the technologies and concepts used in the video game industry. Second, interaction devices to give an insight into how player can interact with video games and to find interesting interaction devices to be used with the game prototype. Third, immersion in order to be able to create an immersive game and also to help with the questionnaire. Last, game development technologies in order to understand what options are available and to answer research questions RQ3.1 and RQ3.2.
+\subsection{Literature Study}
+A literature study will be conducted which will explore different aspects of video game development. This includes first, an evolution of game technology to provide context and background for the technologies and concepts used in the video game industry. Second, interaction devices to give an insight into how player can interact with video games and to find interesting interaction devices to be used with the game prototype. Third, immersion in order to be able to create an immersive game and also to help with the questionnaire. Last, game development technologies in order to understand what options are available and to answer research questions RQ3.1 and RQ3.2. The litterature study can be found in Part \ref{prt:study}.
 
 \subsection{Game Prototype}
-A game prototype will be created to be able to test how children will respond to a collaborative game. This game prototype will feature two players with different roles that need to work together to reach the goal. The focus of the game prototype will be to encourage social interaction between the players. The prototype will be developed using tools, interaction devices, and concepts based on the litterature study. The focus of the development will be to create a prototype that is easily modifiable to add new features, and the gameplay must be simple enough for children to understand and play. The development of the game prototype will be the main way of answering the research questions RQ1.1, RQ1.2, and RQ1.3.
+A game prototype will be created to be able to test how children will respond to a collaborative game. This game prototype will feature two players with different roles that need to work together to reach the goal. The focus of the game prototype will be to encourage social interaction between the players. The prototype will be developed using tools, interaction devices, and concepts based on the literature study. The focus of the development will be to create a prototype that is easily modifiable to add new features, and the gameplay must be simple enough for children to understand and play. The development of the game prototype will be the main way of answering the research questions RQ1.1 and RQ1.2. Details about the implementation and design of the game prototype can be found in Part \ref{prt:prototype}.
 
 \subsection{Play Testing and Questionnaire}
-A play testing session with a group of children will be conducted, accompanied by a questionnaire that will help with the evaluation of the game prototype. A questionnaire was chosen to ask all the participants the same questions in order to get answers in a quantitative form that can easily be analysed. The observations from the play testing and results from the questionnaire will be used in the answering of research questions RQ2.1 and RQ2.2.
+A play testing session with a group of children will be conducted, accompanied by a questionnaire that will help with the evaluation of the game prototype. A questionnaire was chosen to ask all the participants the same questions in order to get answers in a quantitative form that can easily be analysed. The observations from the play testing and results from the questionnaire will be used in the answering of research questions RQ2.1 and RQ2.2. More details about the play testing in Part \ref{prt:testing}, and a more detailed description of the questionnaire can be found in Section \ref{sec:questionnaire}.
 
 
 
