--- a/doc/report/study/chp_immersion.tex
+++ b/doc/report/study/chp_immersion.tex
@@ -10,20 +10,27 @@ Other measures to keep the player immersed become apparent when looking deeper.
 One of these is through the setting and storyline of a game, and there are different ways for a storyline to unfold.
 If a game does not keep up with the standard set by the other game aspects, the suspense of disbelief may be broken \cite{overmars2012}. Social interaction is a big part of why we play video game, people use video games as a way to spend time with friends.
 
-Immersion is important when creating a game, and the information gathered here will be important when designing and developing the game prototype. The social interaction  section will be especially useful when creating the game prototype, because it will be one of the core concepts. The concepts from Gameflow will also be important when creating questions for the questionnaire, since it will be based on Gameflow.
-\note{Feedback?}
+Immersion is important when creating a game, and the information gathered here will be important when designing and developing the game prototype. The social interaction  section will be especially useful when creating the game prototype, because it will be one of the core concepts. Concepts from the Gameflow framework will also be important when creating questions for the questionnaire, because it is a useful framework for evaluating immersion.
 
 
-\section{Gameflow and Game Enjoyment}
+\section{GameFlow and Game Enjoyment}
 \label{immersionGameflow}
 A player who does not enjoy a game will not continue to play it.
-This is where gameflow becomes important, as a player who is experiencing gameflow is enjoying the game.
-The term gameflow was introduced by Sweetser \cite{sweetser2005gameflow} to create a model for player enjoyment in video games.
-It is based on the term flow from Csikszentmihalyi \cite{csikszentmihalyi1991flow}, which is described as \textcquote{csikszentmihalyi1991flow}{so gratifying that people are willing to do it for its own sake, with little concern for what they will get out of it, even when it is difficult or dangerous}.
-Immersion is one of the elements of gameflow.
-An immersed player should be deeply involved in the game without much effort.
-They should become less aware of their surroundings and self, experience an altered sense of time, and feel emotionally and viscerally involved in the game.
-Immersion, along with the other elements of gameflow, are described in greater detail by Sweetser \cite{sweetser2005gameflow}.
+This is where GameFlow becomes important, as a player who is experiencing gameflow is enjoying the game.
+The term GameFlow was introduced by Sweetser \cite{sweetser2005gameflow} to create a model for player enjoyment in video games.
+It is based on the term flow from Csikszentmihalyi, which is described as \textcquote{csikszentmihalyi1991flow}{so gratifying that people are willing to do it for its own sake, with little concern for what they will get out of it, even when it is difficult or dangerous}.
+
+The GameFlow model consists of eight core elements - concentration, challenge, skills, control, clear goals, feedback, immersion, and social interaction. Each of the elements have criteria that relate to Csikszentmihalyi's elements of flow. The GameFlow model was found as a useful tool for reviewing games and identifying issues that could affect game enjoyment. The core elements of the GameFlow model are described by Sweetser \cite{sweetser2005gameflow} as follows. 
+\begin{description}
+\item[Concentration:] Games should require concentration and the player should be able to concentrate on the game without being distracted from tasks that they want or need to concentrate on. 
+\item[Challenge:] Games should be sufficiently challenging and match the players skill level, and the level of challenge should increase as the player progresses through the game. 
+\item[Player Skills:] Games must support skill development and mastery, and should allow for players to develop their skills through playing the game. 
+\item[Control:] Players should feel a sense of control of their actions and movement in the game world, and players should be able to recover from errors. 
+\item[Clear Goals:] Games should have clear goals presented at appropriate times, where overriding goals of the game should be presented early. 
+\item[Feedback:] Players must receive feedback from the game in form of progress towards their goals, feedback on immediate actions, and players should always know their status or score. 
+\item[Immersion:] Players should experience deep, but effortless involvement in the game through becoming less aware of their surroundings and less worried about everyday life. 
+\item[Social Interaction:] Games should support social interaction between players and encourage competition and cooperation between players.
+\end{description}
 
 % What makes things fun to learn...
 Malone \cite{malone1980makes} categorizes the essential characteristics that makes games fun into three categories: challenge, fantasy, and curiosity.
@@ -52,11 +59,10 @@ There are also considerations to be taken regarding accessibility for colour bli
 % consider moving this paragraph to the summary or results
 There are different reasons for not choosing a realistic visual style.
 One such reason is a lack of realism in other aspects of the game.
-This could be the \gls{ai}, as mentioned in Section \ref{immersionAi} or how the game is controlled.
 Another reason could be to complement other aspects of the game.
 \={O}kami \cite{okami2006}, a game based on Japanese storytelling, uses a visual style described as "sumi-e / cel-shaded / 3D" \cite{donovan2013pretty}, which complements the story and setting of the game.
 See Figure \ref{fig:okamigraphics} for an example of the graphics from \={O}kami.
-\hfigure{okamigraphics}{The graphical style of \={O}kami}{0.7}
+\hfigure{okamigraphics}{The graphical style of \={O}kami}{1}
 
 % Important ... things
 % Examples?
@@ -83,7 +89,7 @@ In some games the audio can be a central part of the gameplay, as it is in the g
 The elements in the game is controlled by the music which, as the name might suggest, is playing at 140 pbm.
 Each element has it's own, recognizable sound that plays to the beat of the music, which means that the player can know the nature of the upcoming obstacles and challenges before they appear on screen.
 Figure \ref{fig:140} shows a screenshot from 140.
-\hfigure{140}{Screenshot of 140}{0.7}
+\hfigure{140}{Screenshot of 140}{1}
 
 While audio is one of many aspects in most games, there exists games based solely on sound.
 The graphics are very simple or completely non-existent.
@@ -125,7 +131,7 @@ The game tracks the players movement and the player interacts with the world usi
 The player has limited movement within a virtual ship that maps to the movement in the real world, but the ship can move and navigate the much larger virtual world.
 By doing this, the game can have a large world and still allow the player to play in a smaller room.
 Figure \ref{fig:hoverjunkers} shows a screenshot of a video where a Hover Junkers developer plays the game \cite{hoverVideo}.
-\hfigure{hoverjunkers}{Hover Junkers gameplay}{0.7}
+\hfigure{hoverjunkers}{Hover Junkers gameplay}{1}
 
 \section{Setting and Storyline}
 \label{immersionStoryline}
@@ -134,29 +140,21 @@ By giving the player a setting to the game and a storyline to play, they may fin
 This can be achieved by adding an overarching story, smaller stories, character progression, a game world, and other elements outside the core game concept.
 
 \section{Social Interaction}
-Social interaction is not part of the flow in Sweetser's Gameflow \cite{sweetser2005gameflow}, and can often interrupt the immersion in a game by providing a link to the real world that can break the immersion in a game world. However social interaction plays a big part in video games and some people play games for the social interaction. Lazzaro \cite{lazzaro2004we} mentions social interaction as one of the four keys to emotion in their article on why we play video games. Many players get their enjoyment out of a game by playing with other people inside, and outside of the game. Players may even play games that they do not like, just to spend time with their friends. Some players use video games as a mechanism for social interaction. Multiplayer games are best at creating social interaction and games with both cooperative and competitive elements offer a wider variety of emotions in the players.
+Social interaction is a part of the flow in Sweetser's GameFlow model \cite{sweetser2005gameflow}, but it can often interrupt the immersion in a game world by providing a link to the real world. However, social interaction plays a big part in video games and some people play games for the social interaction alone. Lazzaro \cite{lazzaro2004we} mentions social interaction as one of the four keys to emotion in their article on why we play video games. Many players get their enjoyment out of a game by playing with other people inside, and outside of the game. Players may even play games that they do not like, just to spend time with their friends. Some players use video games as a mechanism for social interaction. Multiplayer games are best at creating social interaction and games with both cooperative and competitive elements offer a wider variety of emotions in the players. Wang \cite{wang2015wear} showed how social interaction could be used in a game based student response system, Kahoot!, to better engage students in a lecture. They were able to improve the simple gameplay of a quiz format by including elements that encouraged social interaction among the students.
 \note{feedback?}
 
 
 \section{Summary}
-\note{Er dette for langt?}
-In this chapter some of the different aspects that may affect immersion in a game has been discussed.
-While each topic can be the subject of a closer study by it self, this chapter only gives an overview and some examples.
+In this chapter some of the different aspects that affect immersion in games have been discussed.
 
-In the first section, the idea behind gameflow and enjoyment in games is described and put in the context of the following sections.
+GameFlow is a model made by Sweetser \cite{sweetser2005gameflow} for measuring player enjoyment in video games, and describes eight main elements that has to do with experiencing flow when playing video games. Malone \cite{malone1980makes} explains game enjoyment with three categories that captures the main characteristics of what makes games fun to play. 
 
 Graphics provide an important interface to most games, although some games without a graphical interface exists.
 Audio can be used both for ambiance and as an essential aspect of a game.
-Giving the player a form of haptic feedback may also give a stronger sense of immersion.
-\gls{ar} and \gls{vr} technology opens the gates for new ways of playing and interacting with games.
-
-\gls{ar} and \gls{vr} provide a whole new way to get immersed in video games by taking up most of, in not all of your vision. This is an interesting area of video games and it will be interesting to see if this technology gains popularoty in the masses.
-
-Game content is another important aspect.
-Creating a setting and storyline in a game may have a significant influence on immersion and motivation.
-There is a multitude of variations and options within each field which all bring something different to the game.
-Some combinations of these may work better than others.
-Using one or more of these effects the wrong way may break the immersion, even if other aspects are well implemented.
-Accessibility for gamers with disabilities is also a subject to keep in mind when developing games.
+Giving the player a form of haptic feedback may also give a stronger sense of immersion. \gls{ar} and \gls{vr} provide a whole new way to get immersed in video games by taking up most of, in not all of your vision. This is an interesting area of video games and it will be interesting to see if this technology gains popularity in the masses. Game content is another important aspect. Creating a setting and storyline in a game has a significant influence on immersion and motivation to play the game.
 
 Social interaction plays a big part in why we play video games. People even play games they dislike just to play with their friends. Competition and cooperation create emotions in players, which players use as a mechanism for social interaction.
+
+Immersion is an important part to keep in mind when developing video games and all of the different aspects described here will come into play when creating the game prototype. GameFlow seems like a good tool for reviewing a game, and seems to be a good model to base the questionnaire on. It is also important to keep in mind how social interaction affects games, since this is a core concept of this project.
+
+\note{Prøvde å styre det litt mer mot prosjektet, og fjernet litt unødig informasjon her.}
