--- a/doc/report/study/part_study.tex
+++ b/doc/report/study/part_study.tex
@@ -1,6 +1,7 @@
 \epigraphhead[400]{This describes the literature study that was conducted in this thesis to help answer the research questions and support the results that were obtained.}
 
 \part{Literature Study}
+\label{prt:study}
 \input{study/chp_games_history}
 \input{study/chp_interaction_devices}
 \input{study/chp_immersion}
